--- a/audit-server/audit-server-amqp/src/test/resources/test.properties
+++ b/audit-server/audit-server-amqp/src/test/resources/test.properties
@@ -1,7 +1,8 @@
-audit-server-amqp.server.host=172.16.118.36
+audit-server-amqp.server.host=localhost
 audit-server-amqp.server.port=5672
 audit-server-amqp.exchange.name=audit_events_test
+audit-server-amqp.connection.retryTime=60
 
-audit-client-amqp.server.host=172.16.118.36
+audit-client-amqp.server.host=localhost
 audit-client-amqp.server.port=5672
 audit-client-amqp.exchange.name=audit_events_test
